--- a/gaming.html
+++ b/gaming.html
@@ -70,7 +70,7 @@
           </div>
 
           <div class="image">
-            <img src="img/anime.png" />
+            <img src="anime.png" />
           </div>
         </div>
       </div>
